--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -14,5 +14,5 @@ jobs:
       - name: Run Super-Linter
         uses: super-linter/super-linter/slim@v5
         env:
-          DEFAULT_BRANCH: main
+          DEFAULT_BRANCH: ${{ github.ref }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
