--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -9,7 +9,14 @@ jobs:
         uses: actions/checkout@v3
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-region: us-east-1
+          role-session-name: dev
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+
       - uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.3.9
