--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,6 +1,11 @@
 name: Terraform Plan
 run-name: Terraform Plan 🚀
 on: [push]
+env:
+  AWS_REGION : "us-east-1"
+permissions:
+    id-token: write
+    contents: read
 jobs:
   Terraform-Plan:
     runs-on: ubuntu-latest
@@ -13,20 +18,20 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          aws-region: us-east-1
-          role-session-name: dev
-          role-skip-session-tagging: true
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+          role-session-name: GitHub_to_AWS_via_FederatedOIDC
+          aws-region: ${{ env.AWS_REGION }}
 
-      - uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.3.9
-      - run: terraform init
-      - id: plan
-        run: terraform plan -no-color
-      - run: echo ${{ steps.plan.outputs.stdout }}
-      - run: echo ${{ steps.plan.outputs.stderr }}
-      - run: echo ${{ steps.plan.outputs.exitcode }}
+      - name: Sts GetCallerIdentity
+        run: |
+          aws sts get-caller-identity
+
+      # - uses: hashicorp/setup-terraform@v2
+      #   with:
+      #     terraform_version: 1.3.9
+      # - run: terraform init
+      # - id: plan
+      #   run: terraform plan -no-color
+      # - run: echo ${{ steps.plan.outputs.stdout }}
+      # - run: echo ${{ steps.plan.outputs.stderr }}
+      # - run: echo ${{ steps.plan.outputs.exitcode }}
