--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -26,12 +26,12 @@ jobs:
         run: |
           aws sts get-caller-identity
 
-      # - uses: hashicorp/setup-terraform@v2
-      #   with:
-      #     terraform_version: 1.3.9
-      # - run: terraform init
-      # - id: plan
-      #   run: terraform plan -no-color
-      # - run: echo ${{ steps.plan.outputs.stdout }}
-      # - run: echo ${{ steps.plan.outputs.stderr }}
-      # - run: echo ${{ steps.plan.outputs.exitcode }}
+      - uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.3.9
+      - run: terraform init
+      - id: plan
+        run: terraform plan -no-color
+      - run: echo ${{ steps.plan.outputs.stdout }}
+      - run: echo ${{ steps.plan.outputs.stderr }}
+      - run: echo ${{ steps.plan.outputs.exitcode }}
