--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -38,7 +38,7 @@ jobs:
       - uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.3.9
-      - run: terraform init
+      - run: terraform init -upgrade
       - id: plan
         run: terraform plan -no-color
       - run: echo ${{ steps.plan.outputs.stdout }}
