--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -1,5 +1,5 @@
-name: Terraform Plan
-run-name: Terraform Plan 🚀
+name: Terraform Apply
+run-name: Terraform Apply 🚀
 on: [push]
 env:
   AWS_REGION: "us-east-1"
@@ -38,5 +38,5 @@ jobs:
         with:
           terraform_version: 1.3.9
       - run: terraform init -upgrade
-      - id: apply
-        run: terraform apply -no-color
+      - id: plan
+        run: terraform apply -no-color -auto-approve=true
