--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -1,5 +1,5 @@
-name: Terraform Apply
-run-name: Terraform Apply 🚀
+name: Terraform Destroy
+run-name: Terraform Destroy 🚀
 on: [push]
 env:
   AWS_REGION: "us-east-1"
@@ -8,7 +8,7 @@ permissions:
     id-token: write
     contents: read
 jobs:
-  Terraform-Apply:
+  Terraform-Destroy:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
@@ -38,6 +38,6 @@ jobs:
         with:
           terraform_version: 1.3.9
       - run: terraform init -upgrade
-      - id: plan
+      - id: destroy
         run: |
-          terraform apply -no-color -auto-approve=true -lock=false
+          terraform destroy -no-color -auto-approve=true -lock=false
