--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,6 +1,6 @@
-name: Terraform Destroy
-run-name: Terraform Destroy 🚀
-on: [push]
+name: Terraform Plan
+run-name: Terraform Plan 🚀
+on: [pull_request]
 env:
   AWS_REGION: "us-east-1"
   AWS_PROFILE: "dev"
@@ -8,7 +8,7 @@ permissions:
     id-token: write
     contents: read
 jobs:
-  Terraform-Destroy:
+  Terraform-Plan:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
@@ -38,6 +38,6 @@ jobs:
         with:
           terraform_version: 1.3.9
       - run: terraform init -upgrade
-      - id: destroy
+      - id: plan
         run: |
-          terraform destroy -no-color -auto-approve=true -lock=false
+          terraform plan -no-color -auto-approve=true -lock=false
