--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,6 +1,9 @@
 name: Terraform Plan
 run-name: Terraform Plan 🚀
-on: [pull_request]
+on:
+  pull_request:
+    branches:
+      - develop
 env:
   AWS_REGION: "us-east-1"
   AWS_PROFILE: "dev"
