--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,6 +1,9 @@
 name: Terraform Plan
 run-name: Terraform Plan 🚀
 on: [push, pull_request]
+defaults:
+  run:
+    working-directory: .
 env:
   AWS_REGION: "us-east-1"
   AWS_PROFILE: "dev"
@@ -37,7 +40,6 @@ jobs:
       - uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.3.9
-      - run: terraform init -upgrade
-      - id: plan
-        run: |
+      - run: |
+          terraform init -upgrade
           terraform plan -no-color
