--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -37,10 +37,12 @@ jobs:
         run: |
           aws sts get-caller-identity
 
-      - uses: hashicorp/setup-terraform@v2
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.3.9
       - name: Terraform Plan
+        working-directory: .
         run: |
           terraform init -upgrade
           terraform plan -no-color
